# Meowth-GBA-Translator

./: .gitignore  .gitmodules  CACHE.md  CHANGELOG.md  GITHUB_ACTIONS_TESTING.md  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  Meowth.sln  PHASE1_SUMMARY.md  PHASE2_SUMMARY.md  README.de.md  README.es.md  README.fr.md  README.it.md  README.md  README.zh.md  build-binaries.sh  launcher.py  meowth.toml  plan.md  pyproject.toml  run_full.py  test_build.sh  test_gui.py  texts.json  texts_emerald_de.json  texts_es.json
.github/workflows/: build-csharp.yml  build-gui.yml  publish-pypi.yml  test.yml
docs/: README.md  WINDOWS_FIX_v0.3.3.md
docs/development/: BUGFIX_TRANSLATION_DETECTION.md  USAGE_OLD.md
scripts/: fake_translate.py  test_languages.sh
src/MeowthBridge/: ChsEncoder.cs  FakeTranslator.cs  MeowthBridge.csproj  Program.cs  RealTranslator.cs  RomLoader.cs  TextExtractor.cs  TextPreprocessor.cs  TextWriter.cs
src/meowth/: __init__.py  __main__.py  charmap.py  cli.py  config.py  control_codes.py  dynamic_font_patch.py  font_patch.py  glossary.py  languages.py  manual_entries.json  pcs_codes.py  pcs_scanner.py  pipeline.py  resource_path.py  rom_analyzer.py  rom_config.py  rom_writer.py  text_wrap.py  translator.py
src/meowth/binaries/: __init__.py  loader.py
src/meowth/binaries/linux/: .gitkeep
src/meowth/binaries/macos/: .gitkeep  HexManiac.Core.xml
src/meowth/binaries/windows/: .gitkeep
src/meowth/core/: __init__.py  callbacks.py  config.py  engine.py
src/meowth/gui/: __init__.py  app.py  callbacks.py
src/meowth/gui/components/: __init__.py  config_form.py  log_view.py  progress_view.py
src/meowth/i18n/: __init__.py  messages.py
testgba/: firered_extracted.json  firered_translated.json
tools/: armips
