[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meowth-translator"
version = "0.2.0"
description = "GBA Pokemon ROM translation tool with CLI and GUI support"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "httpx>=0.25",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]
gui = ["nicegui>=1.4.0"]

[project.scripts]
meowth = "meowth.cli:main"
meowth-gui = "meowth.gui:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
meowth = [
    "binaries/windows/*",
    "binaries/macos/*",
    "binaries/linux/*",
]
